=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Improved value validation for nested primary key and clustered by
   columns in INSERT statements.


 - Fix: IP column validation is now done in analysis

2015/02/03 0.46.4
=================

 - Fix: group by queries with a having clause without the group key
   being selected failed

 - Fix: Force UTF8 encoding in file reading collector to avoid JVM's default encoding settings

 - Fix: Filtering on a routing column sometimes didn't work if the value was an
   empty string

 - Fix: Bulk inserts with mixed but compatible types (e.g. int and long) failed

 - Fix: removed unsupported syntax from ``Update`` synposis

2015/01/19 0.46.3
=================

 - SELECT statements that involved tables from the information_schema schema or
   from the sys schema could fail if they contained columns in the ORDER BY
   clause but didn't contain these columns in the result column list.

 - Fix: Return zero row count instead of an exception if update by id
   doesn't match any document

 - Fixed an issue in the ``sys.shards`` table which caused an
   exception when the select limit was lower then the number of
   matching shards on a node.

 - Fixed type conversion of bulk parameters

 - Updated crate-admin to version 0.11.2 which includes following changes:

    - removed usage of sys expressions in wrong context

    - fixed a template rendering issue in cluster view in Safari

    - de-register watches to decrease DOM updates and improve performance in cluster view

    - fixed title of `tables` view if no tables exists or connection is down

2015/01/14 0.46.2
=================

 - fix: throw correct exception if `_version` is misused in WHERE clause

 - improved string lookup performance for group queries and global aggregates

 - Optimized memory estimates for min()/max() aggregates for the CircuitBreaker

 - improved speed of Alter table settings in partitioned tables
