@@ -21,15 +21,19 @@
 
 package io.crate.lucene;
 
+import com.carrotsearch.randomizedtesting.RandomizedTest;
 import com.google.common.collect.Sets;
 import io.crate.analyze.WhereClause;
+import io.crate.exceptions.UnsupportedFeatureException;
 import io.crate.metadata.FunctionIdent;
 import io.crate.metadata.FunctionInfo;
 import io.crate.metadata.Functions;
-import io.crate.operation.operator.EqOperator;
-import io.crate.operation.operator.InOperator;
-import io.crate.operation.operator.OperatorModule;
-import io.crate.planner.symbol.*;
+import io.crate.operation.operator.*;
+import io.crate.planner.symbol.Function;
+import io.crate.planner.symbol.Literal;
+import io.crate.planner.symbol.Reference;
+import io.crate.planner.symbol.Symbol;
+import io.crate.types.ArrayType;
 import io.crate.types.DataType;
 import io.crate.types.DataTypes;
 import io.crate.types.SetType;
@@ -39,7 +43,9 @@ import org.elasticsearch.common.inject.ModulesBuilder;
 import org.elasticsearch.index.cache.IndexCache;
 import org.elasticsearch.search.internal.SearchContext;
 import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.ExpectedException;
 import org.mockito.Answers;
 
 import java.util.Arrays;
@@ -47,12 +53,15 @@ import java.util.Arrays;
 import static io.crate.testing.TestingHelpers.createFunction;
 import static io.crate.testing.TestingHelpers.createReference;
 import static org.hamcrest.Matchers.instanceOf;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.mock;
 
-public class LuceneQueryBuilderTest {
+public class LuceneQueryBuilderTest extends RandomizedTest{
 
     private LuceneQueryBuilder builder;
+
+    @Rule
+    public ExpectedException expectedException = ExpectedException.none();
 
     @Before
     public void setUp() throws Exception {
@@ -68,6 +77,37 @@ public class LuceneQueryBuilderTest {
         Reference foo = createReference("foo", DataTypes.STRING);
         Query query = convert(eq(foo, foo));
         assertThat(query, instanceOf(FilteredQuery.class));
+    }
+
+    @Test
+    public void testLteQuery() throws Exception {
+        Query query = convert(new WhereClause(createFunction(LteOperator.NAME,
+                DataTypes.BOOLEAN,
+                createReference("x", DataTypes.INTEGER),
+                Literal.newLiteral(10))));
+        assertThat(query, instanceOf(NumericRangeQuery.class));
+        assertThat(query.toString(), is("x:{* TO 10]"));
+    }
+
+    @Test
+    public void testEqOnTwoArraysBecomesGenericFunctionQuery() throws Exception {
+        expectedException.expect(UnsupportedFeatureException.class);
+        expectedException.expectMessage("Cannot compare two arrays");
+        DataType longArray = new ArrayType(DataTypes.LONG);
+        convert(new WhereClause(createFunction(EqOperator.NAME,
+                DataTypes.BOOLEAN,
+                createReference("x", longArray),
+                Literal.newLiteral(longArray, new Object[] { 10L, 20L }))));
+    }
+
+    @Test
+    public void testGteQuery() throws Exception {
+        Query query = convert(new WhereClause(createFunction(GteOperator.NAME,
+                DataTypes.BOOLEAN,
+                createReference("x", DataTypes.INTEGER),
+                Literal.newLiteral(10))));
+        assertThat(query, instanceOf(NumericRangeQuery.class));
+        assertThat(query.toString(), is("x:[10 TO *}"));
     }
 
 
